# policy-settings-common

./: AUTHORS  configure.ac  configure.in
basic/: Makefile.am
basic/etc/ohm/: Makefile.am
basic/policy/: Makefile.am  accessory.pl  accessory_rules.pl  audio_cork_rules.pl  audio_groups.pl  audio_route.pl  audio_route_rules.pl  audio_volume_rules.pl  context.pl  hwconfig.pl  policy.dres  resource.pl  resource_classes.pl  telephony.pl
rpm/: policy-settings-common.spec
